@@ -178,6 +178,11 @@ class InstallPluginsDialog extends EnhancedDialog
 		Box box = new Box(BoxLayout.X_AXIS);
 
 		box.add(Box.createGlue());
+		selectAll = new JButton(jEdit.getProperty("install-plugins.select-all"));
+		selectAll.addActionListener(new ActionHandler());
+		box.add(selectAll);
+		box.add(Box.createHorizontalStrut(6));
+
 		install = new JButton(jEdit.getProperty("install-plugins.install"));
 		install.setEnabled(false);
 		getRootPane().setDefaultButton(install);
@@ -260,6 +265,7 @@ class InstallPluginsDialog extends EnhancedDialog
 	private JRadioButton installUser;
 	private JRadioButton installSystem;
 
+	private JButton selectAll;
 	private JButton install;
 	private JButton cancel;
 
@@ -380,6 +386,8 @@ class InstallPluginsDialog extends EnhancedDialog
 		public void actionPerformed(ActionEvent evt)
 		{
 			Object source = evt.getSource();
+			if(source == selectAll)
+				plugins.selectAll();
 			if(source == install)
 				ok();
 			else if(source == cancel)
